--- a/design/style1.css
+++ b/design/style1.css
@@ -62,6 +62,7 @@ button {
     background-color: white;
     margin-top: 35px;
     margin-left: 25px;
-    padding: 5px 10px;
+    padding: 7px 10px;
     text-align: center;
+    border-radius: 15px;
 }
