--- a/design/style1.css
+++ b/design/style1.css
@@ -46,16 +46,29 @@ h3, p{
   background-color: orange;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  color: orange;
 }
 
-.red {
+.color1 button {
+    color: orange;
+}
+
+.red, button{
   background-color: #30475E;
 }
 
+.color2, button {
+    color: #30475E;
+}
+
 .orange {
-  background-color: #222831;
+  background-color: #152D35;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+}
+
+.color3, button{
+    color: #222831;
 }
 
 button {
@@ -65,4 +78,5 @@ button {
     padding: 7px 10px;
     text-align: center;
     border-radius: 15px;
+    border-style: none;
 }
